--- a/src/main/resources/assets/test/lang/en_us.json
+++ b/src/main/resources/assets/test/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "block.test.dasdasdsaasd": "Dasdasdsaasd"
+  "block.test.dasdasdsaasd": "Dasdasdsaasd",
+  "block.test.avifivvfi": "Avifivvfi"
 }
