--- a/src/main/resources/assets/test/lang/en_us.json
+++ b/src/main/resources/assets/test/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "block.test.dasdasdsaasd": "Dasdasdsaasd",
-  "block.test.avifivvfi": "Avifivvfi"
+  "block.test.avifivvfi": "Avifivvfi",
+  "block.test.hgdfgsfgdfg": "Hgdfgsfgdfg"
 }
