--- a/src/main/resources/assets/test/lang/en_us.json
+++ b/src/main/resources/assets/test/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.test.dasdasdsaasd": "Dasdasdsaasd",
+  "block.test.fddghghfgh": "Fddghghfgh",
   "block.test.avifivvfi": "Avifivvfi",
   "block.test.hgdfgsfgdfg": "Hgdfgsfgdfg"
 }
