--- a/src/main/resources/assets/test/lang/en_us.json
+++ b/src/main/resources/assets/test/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.test.viffivifv": "Viffivifv",
   "block.test.dasdasdsaasd": "Dasdasdsaasd",
+  "block.test.vaviaiva": "Vaviaiva",
   "block.test.avifivvfi": "Avifivvfi"
 }
