--- a/src/main/resources/assets/test/lang/en_us.json
+++ b/src/main/resources/assets/test/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "block.test.dasdasdsaasd": "Dasdasdsaasd",
   "block.test.fddghghfgh": "Fddghghfgh",
+  "block.test.tulox": "Tulox",
   "block.test.avifivvfi": "Avifivvfi",
   "block.test.hgdfgsfgdfg": "Hgdfgsfgdfg"
 }
