--- a/src/main/resources/assets/test/lang/en_us.json
+++ b/src/main/resources/assets/test/lang/en_us.json
@@ -1,4 +1,9 @@
 {
+  "block.test.viffivifv": "Viffivifv",
   "block.test.dasdasdsaasd": "Dasdasdsaasd",
-  "block.test.avifivvfi": "Avifivvfi"
+  "block.test.lada": "Lada",
+  "block.test.fddghghfgh": "Fddghghfgh",
+  "block.test.vaviaiva": "Vaviaiva",
+  "block.test.avifivvfi": "Avifivvfi",
+  "block.test.hgdfgsfgdfg": "Hgdfgsfgdfg"
 }
